syntax = "proto3";

                 package samlProvider;
service SamlProviderService {
 rpc createSamlProvider (SamlProviderCreateInput) returns (SamlProvider) {}
rpc samlProviders (findManyParams) returns (stream SamlProvider) {}
rpc samlProvider (SamlProviderWhereUniqueInput) returns (SamlProvider) {}
rpc updateSamlProvider (SamlProviderUpdateInput) returns (SamlProvider) {}
rpc deleteSamlProvider (SamlProviderWhereUniqueInput) returns (SamlProvider) {} 
 }
message SamlProviderCreateInput {
string attributeMapping = 1;
string createdAt = 2;
string entityId = 3;
string id = 4;
string metadataUrl = 5;
string metadataXml = 6;
string nameIdFormat = 7;
string updatedAt = 8;
};
message SamlProvider {
string attributeMapping = 1;
string createdAt = 2;
string entityId = 3;
string id = 4;
string metadataUrl = 5;
string metadataXml = 6;
string nameIdFormat = 7;
string updatedAt = 8;
};
message SamlProviderWhereUniqueInput {
string attributeMapping = 1;
string createdAt = 2;
string entityId = 3;
string id = 4;
string metadataUrl = 5;
string metadataXml = 6;
string nameIdFormat = 7;
string updatedAt = 8;
};
message SamlProviderUpdateInput {
string attributeMapping = 1;
string createdAt = 2;
string entityId = 3;
string id = 4;
string metadataUrl = 5;
string metadataXml = 6;
string nameIdFormat = 7;
string updatedAt = 8;
};
message findManyParams {

};